--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,31 @@
 @import "tailwindcss";
 
 body {
-    background-color: #000000;
+    background-color: #1f2937;
+}
+
+html {
+    scrollbar-width: thin;
+    scrollbar-color: #a78bfa #1f2937;
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #1f2937;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, #a78bfa, #f472b6);
+    border-radius: 5px;
+}
+
+/* 4. Thay đổi màu khi di chuột (Hover) */
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(to bottom, #8b5cf6, #ec4899);
 }
