--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,35 @@
 @import "tailwindcss";
 
 body {
-    background-color: #1f2937;
+  background-color: #1f2937;
 }
 
 html {
-    scrollbar-width: thin;
-    scrollbar-color: #a78bfa #1f2937;
-    scrollbar-gutter: stable;
+  scrollbar-width: thin;
+  scrollbar-color: #06b6d4 #1f2937;
+  scrollbar-gutter: stable;
 }
 
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+  width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #1f2937;
-    border-radius: 5px;
+  background: #1f2937;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(to bottom, #a78bfa, #f472b6);
-    border-radius: 5px;
+  background: linear-gradient(to bottom, #22d3ee, #06b6d4);
+  border-radius: 5px;
 }
 
 /* 4. Thay đổi màu khi di chuột (Hover) */
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(to bottom, #8b5cf6, #ec4899);
+  background: linear-gradient(to bottom, #06b6d4, #0891b2);
 }
-
